Updated original repo

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
     <meta property="og:description" content="A guest book with comments stored on the NEAR blockchain">
     <!-- <meta property="og:image" content=""> -->
     <!-- <meta property="og:url" content=""> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Montserrat+Alternates:wght@300&family=Varela+Round&display=swap" rel="stylesheet">
     <!-- <meta name="twitter:card" content="summary_large_image"> -->
   </head>
   <body>
