--- a/index.html
+++ b/index.html
@@ -1,35 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <link rel="icon" href="/favicon.26242483.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#000000">
-    <link rel="apple-touch-icon" href="/favicon.26242483.ico">
-    <link rel="stylesheet" href="/global.65e27967.css">
-    <title>NEAR Guest Book</title>
-    <meta property="og:title" content="NEAR Guest Book">
-    <meta property="og:description" content="A guest book with comments stored on the NEAR blockchain">
-    <!-- <meta property="og:image" content=""> -->
-    <!-- <meta property="og:url" content=""> -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Montserrat+Alternates:wght@300&family=Varela+Round&display=swap" rel="stylesheet">
-    <!-- <meta name="twitter:card" content="summary_large_image"> -->
-  <script src="/global.65e27967.js"></script></head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `yarn dev`.
-      To create a production bundle, use `yarn build`.
-    -->
-    <script src="/src.e31bb0bc.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><link rel="icon" href="favicon.3914b85e.ico"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="theme-color" content="#000000"><link rel="apple-touch-icon" href="favicon.3914b85e.ico"><link rel="stylesheet" href="global.04fc9a95.css"><title>NEAR Guest Book</title><meta property="og:title" content="NEAR Guest Book"><meta property="og:description" content="A guest book with comments stored on the NEAR blockchain"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin=""><link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Montserrat+Alternates:wght@300&family=Varela+Round&display=swap" rel="stylesheet"></head><body> <noscript>You need to enable JavaScript to run this app.</noscript> <div id="root"></div>  <script src="src.30c366aa.js"></script> </body></html>
